travels table added, minor fixes and refactoring